tags/2013-08-29_cppreference/Archive/aeaee71179ffe29b64c5ec73a5dc0867-93e6c6235a92d0c233f44beab03470ad/output
+ clang++ -std=c++11 -Wall -pedantic main.cpp
main.cpp:14:10: warning: variable length arrays are a C99 feature [-Wvla-extension]
    int a[random_int_function(10)] = {0};
         ^
main.cpp:14:11: error: variable-sized object may not be initialized
    int a[random_int_function(10)] = {0};
          ^~~~~~~~~~~~~~~~~~~~~~~
1 warning and 1 error generated.
